Opened 14 years ago
Closed 8 years ago
#6775 closed bug (fixed)
[PNGTranslator] can't open /system/documentation/diskusage/*.png images
Reported by: | diver | Owned by: | leavengood |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Add-Ons/Translators/PNG | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
This is hrev39274 - gcc4.
The error is: "Could not load image! Either the file or an image translator for it does not exist."
note: this occurs only on gcc4.
Attachments (2)
Change History (31)
comment:1 by , 14 years ago
comment:2 by , 14 years ago
Summary: | [ShowImage] can't open /system/documentatoion/diskusage/*.png images → [ShowImage] can't open /system/documentation/diskusage/*.png images |
---|
comment:3 by , 14 years ago
Here is terminal output:
ShowImage /boot/system/documentation/diskusage/home.png MessageImporter::Import() - error unflattening icon archive: Data is not a message libpng error: [00][20][00][00]: invalid chunk type
comment:4 by , 14 years ago
Does a second version libpng* exist outside of /boot/system? Any oddities reported by checkfs?
by , 14 years ago
Attachment: | ShowImage.png added |
---|
comment:6 by , 14 years ago
Resolution: | → invalid |
---|---|
Status: | new → closed |
Looks like this file is corrupted on your drive. MD5 looks like this over here:
28f23b5988ca58f36e7fbe77bbcd64f4 /boot/system/documentation/diskusage/home.png
comment:7 by , 14 years ago
Something still isn't right.
After rm -rf trunk/docs/apps/diskusage and image rebuild ShowImage still can't open this images, but Web+ has no problems opening them.
MD5 looks like yours.
comment:9 by , 14 years ago
Well something must be wrong at your side, since it's working fine here. And since the error comes from libpng.so, not ShowImage, maybe it's somehow using a different libpng.so version? I am using hrev39379.
comment:10 by , 14 years ago
FYI, these are the md5 for the two libpng.so.1.4 on my system:
~> md5sum /boot/system/lib/gcc2/libpng.so.1.4 cd6ac6d0cc651eda8b0110d422184ed5 /boot/system/lib/gcc2/libpng.so.1.4 ~> md5sum /boot/system/lib/libpng.so.1.4 7a123283c75968a5ec845a75818c6171 /boot/system/lib/libpng.so.1.4
I get the same error with these PNGs. MD5 is the same. Opening in WonderBrush works but says:
libpng error: PNG unsigned integer out of range
Image is hrev39402, gcc4hybrid.
comment:11 by , 14 years ago
http://haiku-files.org/vmware/haiku-nightly-r39409-x86gcc4hybrid-vmware.zip also can't open them.
comment:12 by , 14 years ago
... but http://haiku-files.org/vmware/haiku-nightly-r39409-x86gcc2hybrid-vmware.zip opens them.
So it seems GCC4 only issue.
comment:13 by , 14 years ago
comment:14 by , 14 years ago
Resolution: | invalid |
---|---|
Status: | closed → reopened |
Then it's at least sure there is indeed something wrong, it's just the question where.
comment:15 by , 14 years ago
comment:17 by , 14 years ago
Still with us in nightly hrev40715, gcc4.
Replying to stargatefan:
still seeing trouble with jpegs only at 39943 gcc2 hybrid
Likely not related to this bug, please file a new ticket if the problem still exists.
comment:18 by , 13 years ago
comment:19 by , 13 years ago
Resolution: | → fixed |
---|---|
Status: | reopened → closed |
ShowImage shows those PNGs, though still showing "libpng error: PNG unsigned integer out of range". Closing as fixed anyway. (As aside: I don't see a reason to keep /boot/system/documentation/diskusage at all...)
comment:20 by , 13 years ago
This is gcc4 only issue which is still here. I think it should be reopened.
comment:21 by , 13 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
Ah, didn't know that... reopened then.
comment:22 by , 13 years ago
Description: | modified (diff) |
---|
comment:23 by , 12 years ago
Component: | Applications/ShowImage → Add-Ons/Translators/PNG |
---|---|
Summary: | [ShowImage] can't open /system/documentation/diskusage/*.png images → [PNGTranslator] can't open /system/documentation/diskusage/*.png images |
Still with us in hrev44676.
by , 8 years ago
Attachment: | ShowImage-2472-debug-16-07-2017-09-48-52.report added |
---|
comment:26 by , 8 years ago
patch: | 0 → 1 |
---|
comment:27 by , 8 years ago
Can't we just run these images through pngcrush or optipng to re-encode them? I think that would fix the issue. Unless we can find other images elsewhere triggering the same problem.
comment:28 by , 8 years ago
That might be an option, yes. However Web+ and Qt apps have no problem opening those.
comment:29 by , 8 years ago
Resolution: | → fixed |
---|---|
Status: | reopened → closed |
Fixed in hrev51297:
- Fixed the crash in ShowImage. Failing to open files is ok, crashing is not.
- Replaced the images with modern and hopefully correct PNGs.
Certainly works here. Any more info?